test/bad/functions/type08.px

func neg(b: Bool = false): Bool def
    return not b

func f(g: Bool->Bool): Bool def
    return g()

print f(neg)
